--- a/css/styles.scss
+++ b/css/styles.scss
@@ -117,7 +117,6 @@ header {
 	}
 	.note-title-field {
 		font-size: 16px;
-		margin-bottom: 10px;
 	}
 	.note-description-field {
 		margin-top: 20px;
@@ -130,9 +129,9 @@ header {
 		height: 0;
 	}
 	&:first-child {
-		padding-top: 70px;
+		padding-top: 60px;
 		.controls {
-			top: 60px;
+			top: 50px;
 		}
 		&:before {
 			background-color: #f2f2f2;
@@ -143,7 +142,7 @@ header {
 			display: block;
 			font-size: 12px;
 			left: 0;
-			padding: 15px 0;
+			padding: 10px 0;
 			position: absolute;
 			text-align: center;
 			top: 0;
@@ -203,6 +202,7 @@ label {
 	b {
 		float: left;
 		margin-right: 5%;
+		padding-top: 7px;
 		text-align: right;
 		width: 20%;
 	}
@@ -210,6 +210,8 @@ label {
 		-webkit-appearance: none;
 		border: 1px solid #ccc;
 		box-sizing: border-box;
+		font-size: 14px;
+		margin-bottom: 15px;
 		padding: 7px;
 		width: 75%;
 	}
@@ -218,6 +220,7 @@ label {
 	}
 }
 .reveal-modal {
+	max-width: 100%;
 	h2 {
 		color: #333;
 		font-size: 26px;
