UI tweaks. Removed compiled css from repo.

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -186,8 +186,8 @@ p.note-date {
 .sortable-placeholder {
 	background-color: #f2f2f2;
 	border: {
-		top: 2px dashed #dfdfdf;
-		bottom: 2px dashed #dfdfdf;
+		top: 2px dashed #e9e9e9;
+		bottom: 2px dashed #e9e9e9;
 	}
 	list-style-type: none;
 	min-height: 100px;
