--- a/css/styles.scss
+++ b/css/styles.scss
@@ -163,7 +163,25 @@ header {
 p.note-date {
   font-size: 10px;
   color: #aaa;
-  margin-top: 15px;
+  margin-top: 20px;
+}
+.note-tags {
+  margin: 10px 0 0 0;
+  padding: 0;
+  li {
+    display: inline;
+    font-size: 9px;
+    list-style-type: none;
+    margin-right: 5px;
+    text-transform: uppercase;
+    a {
+      background-color: #ddd;
+      border-radius: 20px;
+      color: #777;
+      padding: 3px 12px;
+      text-decoration: none;
+    }
+  }
 }
 .controls {
   display: none;
